// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col"
>
  <h4
    className="mb-2"
  >
    Please select your age:
  </h4>
  <label
    className="sc-iXgyBM gZWKff"
    htmlFor="age1"
  >
    <input
      aria-label="0 - 30"
      className="sc-dWbAOG kYLntv"
      id="age1"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-ZGQiH kbFCoo"
    >
      <div
        className="sc-hZXpjI jwzlZw"
      />
    </span>
    <span
      className="sc-gaLNVN djLZwb"
    >
      0 - 30
    </span>
  </label>
  <label
    className="sc-iXgyBM gZWKff"
    htmlFor="age2"
  >
    <input
      aria-label="31 - 60"
      className="sc-dWbAOG kYLntv"
      id="age2"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-ZGQiH kbFCoo"
    >
      <div
        className="sc-hZXpjI jwzlZw"
      />
    </span>
    <span
      className="sc-gaLNVN djLZwb"
    >
      31 - 60
    </span>
  </label>
  <label
    className="sc-iXgyBM gZWKff"
    htmlFor="age3"
  >
    <input
      aria-label="61 - 100"
      className="sc-dWbAOG kYLntv"
      id="age3"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-ZGQiH kbFCoo"
    >
      <div
        className="sc-hZXpjI jwzlZw"
      />
    </span>
    <span
      className="sc-gaLNVN djLZwb"
    >
      61 - 100
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="sc-iXgyBM gZWKff"
>
  <input
    checked={true}
    className="sc-dWbAOG kYLntv"
    onClick={[Function]}
    readOnly={true}
    type="radio"
  />
  <span
    className="sc-ZGQiH kbFCoo"
  >
    <div
      className="sc-hZXpjI jwzlZw"
    />
  </span>
  <span
    className="sc-gaLNVN djLZwb"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="sc-iXgyBM gZWKff"
>
  <input
    className="sc-dWbAOG kYLntv"
    disabled={true}
    onClick={[Function]}
    type="radio"
  />
  <span
    className="sc-ZGQiH kbFCoo"
  >
    <div
      className="sc-hZXpjI jwzlZw"
    />
  </span>
  <span
    className="sc-gaLNVN djLZwb"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders No label 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <label
      className="sc-iXgyBM gZWKff"
      htmlFor="button1"
    >
      <input
        className="sc-dWbAOG kYLntv"
        id="button1"
        name="button"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-ZGQiH kbFCoo"
      >
        <div
          className="sc-hZXpjI jwzlZw"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <h4
      className="mb-2"
    >
      Please select your age:
    </h4>
    <label
      className="sc-iXgyBM gZWKff"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="sc-dWbAOG kYLntv"
        id="age1"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-ZGQiH kbFCoo"
      >
        <div
          className="sc-hZXpjI jwzlZw"
        />
      </span>
      <span
        className="sc-gaLNVN djLZwb"
      >
        0 - 30
      </span>
    </label>
    <label
      className="sc-iXgyBM gZWKff"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="sc-dWbAOG kYLntv"
        id="age2"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-ZGQiH kbFCoo"
      >
        <div
          className="sc-hZXpjI jwzlZw"
        />
      </span>
      <span
        className="sc-gaLNVN djLZwb"
      >
        31 - 60
      </span>
    </label>
    <label
      className="sc-iXgyBM gZWKff"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="sc-dWbAOG kYLntv"
        id="age3"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-ZGQiH kbFCoo"
      >
        <div
          className="sc-hZXpjI jwzlZw"
        />
      </span>
      <span
        className="sc-gaLNVN djLZwb"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;
